[package]
name = "spawner"
version = "0.3.1"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]
description = "Tiny wrapper for `thread::spawn` which optionally auto-joins threads on drop"
homepage = "https://github.com/durka/spawner.rs"
repository = "https://github.com/durka/spawner.rs"
readme = "README.md"
license = "MIT"
keywords = ["thread", "spawn", "join", "drop", "scoped"]

[features]
nightly = []

